--- a/mainwidget.ui
+++ b/mainwidget.ui
@@ -59,7 +59,10 @@
     </layout>
    </item>
    <item row="1" column="0">
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="statusGroup">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Status</string>
      </property>
@@ -202,7 +205,10 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="controlGroup">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Control</string>
      </property>
